--- a/papers/GECCO2011/gecco2011brendelschoenauer/tosheridanprinting/pp471-brendel.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/tosheridanprinting/pp471-brendel.tex
@@ -9,6 +9,7 @@
 \usepackage{color}
 \usepackage{subfig}
 
+
 \conferenceinfo{GECCO'11,} {July 12--16, 2011, Dublin, Ireland.}
 \CopyrightYear{2011}
 \crdata{978-1-4503-0690-4/11/07}
@@ -76,7 +77,9 @@ As \cite{BibGECCO:2010} demonstrates parameters tuned for one instance may not b
 
 \begin{figure}[h!]
   \centering
-    \includegraphics[width=0.5\textwidth]{lao.png}
+%    \includegraphics[width=0.5\textwidth]{lao.png}
+     \includegraphics[width=0.5\textwidth]{lao.eps}
+
   \caption{Flowchart of the LaO framework, displaying only 4 instances.}
 \label{figure:laoflowchart}
 \end{figure}
