--- a/papers/AE2011/ae2011.tex
+++ b/papers/AE2011/ae2011.tex
@@ -15,7 +15,7 @@
 \begin{document}
 
 
-\title{Instance-Based Parameter Tuning\\
+\title{Learn-and-Optimize a Parameter Tuning Framework\\
 for Evolutionary AI Planning}
 
 
